--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Manrope:wght@200..800&display=swap"
       rel="stylesheet"
     />
     <!-- font awesome link -->
@@ -29,10 +29,156 @@
       };
     </script>
     <title>Pengin Fashion</title>
+    <style>
+      .font-manrope {
+        font-family: "Manrope", sans-serif;
+      }
+      .font-bebas {
+        font-family: "Bebas Neue", sans-serif;
+      }
+    </style>
   </head>
   <body>
-    <header></header>
-    <main></main>
+    <!-- header section start -->
+    <header class="max-w-full bg-[#FFFBF0]">
+      <nav class="mx-32 py-12">
+        <div class="flex justify-between">
+          <a href="home.html">
+            <img class="w-56" src="icons/logo.png" alt="Site Logo" />
+          </a>
+          <ul class="flex gap-16">
+            <li><a href="home.html">Home</a></li>
+            <li><a href="product.html">Product</a></li>
+            <li><a href="about.html">About Us</a></li>
+            <li><a href="contact.html">Contact Us</a></li>
+          </ul>
+        </div>
+      </nav>
+      <div class="flex justify-between items-center mt-5 mb-24 mx-32">
+        <div>
+          <h1 class="uppercase font-bebas text-7xl">
+            <span class="text-[#FABE4C]">Be the Penguins</span>
+            <br />
+            <span class="text-[#363958]">of Winter</span>
+          </h1>
+          <p class="mt-2 text-[#3E3E3E]">
+            Lorem Ipsum is simply dummy text of the printing <br />
+            and typesetting industry.
+          </p>
+          <button
+            class="px-7 py-4 mt-4 font-semibold text-white bg-linear-to-r from-[#A4BC46] to-[#85A019] rounded-xl"
+          >
+            <i class="fa-solid fa-cart-shopping"></i>
+            Buy Now
+          </button>
+        </div>
+        <div>
+          <img src="images/model.png" alt="" />
+        </div>
+      </div>
+    </header>
+    <!-- main section starat -->
+    <main class="mx-32 my-10">
+      <!-- category -->
+      <div>
+        <h1 class="font-bebas text-5xl text-[#363958] mb-5">Woman Jacket</h1>
+      </div>
+      <!-- card section -->
+      <div class="flex gap-5 mb-20">
+        <div class="p-6 rounded-xl bg-[#ffff] drop-shadow-xl">
+          <div>
+            <img
+              class="bg-[#F1F1F1] rounded-xl p-10"
+              src="images/jacket-1.png"
+              alt=""
+            />
+            <h1 class="text-2xl font-bold mt-4 mb-3">Yellow Coat Jacket</h1>
+            <p class="text-[#3E3E3E]">
+              Lorem Ipsum is simply dummy text of the printing and typesetting
+              industry.
+            </p>
+          </div>
+          <div class="flex justify-between items-center">
+            <h1 class="font-semibold text-[#FABE4C] text-4xl mt-3">$234</h1>
+            <button
+              class="px-7 py-4 mt-4 font-semibold text-white bg-linear-to-r from-[#A4BC46] to-[#85A019] rounded-xl"
+            >
+              <i class="fa-solid fa-cart-shopping"></i>
+              Buy Now
+            </button>
+          </div>
+        </div>
+        <div class="p-6 rounded-xl bg-[#ffff] drop-shadow-xl">
+          <div>
+            <img
+              class="bg-[#F1F1F1] rounded-xl p-10"
+              src="images/jacket-1.png"
+              alt=""
+            />
+            <h1 class="text-2xl font-bold mt-4 mb-3">Yellow Coat Jacket</h1>
+            <p class="text-[#3E3E3E]">
+              Lorem Ipsum is simply dummy text of the printing and typesetting
+              industry.
+            </p>
+          </div>
+          <div class="flex justify-between items-center">
+            <h1 class="font-semibold text-[#FABE4C] text-4xl mt-3">$234</h1>
+            <button
+              class="px-7 py-4 mt-4 font-semibold text-white bg-linear-to-r from-[#A4BC46] to-[#85A019] rounded-xl"
+            >
+              <i class="fa-solid fa-cart-shopping"></i>
+              Buy Now
+            </button>
+          </div>
+        </div>
+        <div class="p-6 rounded-xl bg-[#ffff] drop-shadow-xl">
+          <div>
+            <img
+              class="bg-[#F1F1F1] rounded-xl p-10"
+              src="images/jacket-1.png"
+              alt=""
+            />
+            <h1 class="text-2xl font-bold mt-4 mb-3">Yellow Coat Jacket</h1>
+            <p class="text-[#3E3E3E]">
+              Lorem Ipsum is simply dummy text of the printing and typesetting
+              industry.
+            </p>
+          </div>
+          <div class="flex justify-between items-center">
+            <h1 class="font-semibold text-[#FABE4C] text-4xl mt-3">$234</h1>
+            <button
+              class="px-7 py-4 mt-4 font-semibold text-white bg-linear-to-r from-[#A4BC46] to-[#85A019] rounded-xl"
+            >
+              <i class="fa-solid fa-cart-shopping"></i>
+              Buy Now
+            </button>
+          </div>
+        </div>
+        <div class="p-6 rounded-xl bg-[#ffff] drop-shadow-xl">
+          <div>
+            <img
+              class="bg-[#F1F1F1] rounded-xl p-10"
+              src="images/jacket-1.png"
+              alt=""
+            />
+            <h1 class="text-2xl font-bold mt-4 mb-3">Yellow Coat Jacket</h1>
+            <p class="text-[#3E3E3E]">
+              Lorem Ipsum is simply dummy text of the printing and typesetting
+              industry.
+            </p>
+          </div>
+          <div class="flex justify-between items-center">
+            <h1 class="font-semibold text-[#FABE4C] text-4xl mt-3">$234</h1>
+            <button
+              class="px-7 py-4 mt-4 font-semibold text-white bg-linear-to-r from-[#A4BC46] to-[#85A019] rounded-xl"
+            >
+              <i class="fa-solid fa-cart-shopping"></i>
+              Buy Now
+            </button>
+          </div>
+        </div>
+      </div>
+    </main>
     <footer></footer>
   </body>
 </html>
