--- a/index.html
+++ b/index.html
@@ -40,13 +40,20 @@
   </head>
   <body>
     <!-- header section start -->
-    <header class="max-w-full bg-[#FFFBF0]">
-      <nav class="mx-32 py-12">
-        <div class="flex justify-between">
+    <header class="lg:px-32 py-14 bg-[#FFFBF0]">
+      <!-- navbar style -->
+      <nav class="lg:flex lg:justify-between lg:items-center p-5">
+        <div>
           <a href="home.html">
-            <img class="w-56" src="icons/logo.png" alt="Site Logo" />
+            <img
+              class="max-w-72 mx-auto"
+              src="icons/logo.png"
+              alt="Site Logo"
+            />
           </a>
-          <ul class="flex gap-16">
+        </div>
+        <div class="pt-5">
+          <ul class="flex justify-between gap-3 lg:gap-6 px-3">
             <li><a href="home.html">Home</a></li>
             <li><a href="product.html">Product</a></li>
             <li><a href="about.html">About Us</a></li>
@@ -54,130 +61,245 @@
           </ul>
         </div>
       </nav>
-      <div class="flex justify-between items-center mt-5 mb-24 mx-32">
+      <!-- banner style -->
+      <div class="lg:flex px-5 my-16 lg:items-center mx-auto justify-between">
         <div>
-          <h1 class="uppercase font-bebas text-7xl">
-            <span class="text-[#FABE4C]">Be the Penguins</span>
-            <br />
+          <h1 class="text-6xl font-bebas">
+            <span class="text-[#FABE4C]">Be the Penguins</span> <br />
             <span class="text-[#363958]">of Winter</span>
           </h1>
-          <p class="mt-2 text-[#3E3E3E]">
-            Lorem Ipsum is simply dummy text of the printing <br />
-            and typesetting industry.
+          <p class="mt-3 mb-5">
+            Embrace the chill with the spirit of penguins—united, resilient,<br />
+            and full of charm. Just like these graceful winter birds, shine in
+            the cold <br />season with warmth, style, and strength.
           </p>
           <button
-            class="px-7 py-4 mt-4 font-semibold text-white bg-linear-to-r from-[#A4BC46] to-[#85A019] rounded-xl"
+            class="px-5 py-3 bg-gradient-to-r from-[#A4BC46] to-[#85A019] rounded-lg text-white font-semibold"
           >
             <i class="fa-solid fa-cart-shopping"></i>
             Buy Now
           </button>
         </div>
         <div>
-          <img src="images/model.png" alt="" />
+          <img class=" " src="images/model.png" alt="" />
         </div>
       </div>
     </header>
-    <!-- main section starat -->
-    <main class="mx-32 my-10">
-      <!-- category -->
-      <div>
-        <h1 class="font-bebas text-5xl text-[#363958] mb-5">Woman Jacket</h1>
-      </div>
-      <!-- card section -->
-      <div class="flex gap-5 mb-20">
-        <div class="p-6 rounded-xl bg-[#ffff] drop-shadow-xl">
-          <div>
-            <img
-              class="bg-[#F1F1F1] rounded-xl p-10"
-              src="images/jacket-1.png"
-              alt=""
-            />
-            <h1 class="text-2xl font-bold mt-4 mb-3">Yellow Coat Jacket</h1>
-            <p class="text-[#3E3E3E]">
-              Lorem Ipsum is simply dummy text of the printing and typesetting
-              industry.
-            </p>
+    <main>
+      <!-- Man collection -->
+      <section class="my-14">
+        <h1 class="uppercase font-bebas text-5xl mx-5 my-5">Man jacket</h1>
+        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4">
+          <div class="p-6 m-6 shadow-xl rounded-xl">
+            <div class="">
+              <img
+                class="bg-[#F1F1F1] rounded-xl p-5"
+                src="images/jacket-4.png"
+                alt=""
+              />
+              <h1 class="font-bold text-2xl text-[#363958] py-4">
+                Snowboard Jacket Mens
+              </h1>
+              <p>
+                Conquer the cold in style! Our men’s snowboard jacket keeps you
+                warm, dry, and comfortable on every winter adventure.
+              </p>
+            </div>
+            <div class="flex justify-between mt-3">
+              <h1 class="text-[#FABE4C] font-black text-4xl">$220</h1>
+              <button
+                class="px-5 py-3 bg-gradient-to-r from-[#A4BC46] to-[#85A019] rounded-lg text-white font-semibold"
+              >
+                <i class="fa-solid fa-cart-shopping"></i>
+                Buy Now
+              </button>
+            </div>
           </div>
-          <div class="flex justify-between items-center">
-            <h1 class="font-semibold text-[#FABE4C] text-4xl mt-3">$234</h1>
-            <button
-              class="px-7 py-4 mt-4 font-semibold text-white bg-linear-to-r from-[#A4BC46] to-[#85A019] rounded-xl"
-            >
-              <i class="fa-solid fa-cart-shopping"></i>
-              Buy Now
-            </button>
+          <div class="p-6 m-6 shadow-xl rounded-xl">
+            <div class="">
+              <img
+                class="bg-[#F1F1F1] rounded-xl p-5"
+                src="images/jacket-4.png"
+                alt=""
+              />
+              <h1 class="font-bold text-2xl text-[#363958] py-4">
+                Snowboard Jacket Mens
+              </h1>
+              <p>
+                Conquer the cold in style! Our men’s snowboard jacket keeps you
+                warm, dry, and comfortable on every winter adventure.
+              </p>
+            </div>
+            <div class="flex justify-between mt-3">
+              <h1 class="text-[#FABE4C] font-black text-4xl">$220</h1>
+              <button
+                class="px-5 py-3 bg-gradient-to-r from-[#A4BC46] to-[#85A019] rounded-lg text-white font-semibold"
+              >
+                <i class="fa-solid fa-cart-shopping"></i>
+                Buy Now
+              </button>
+            </div>
+          </div>
+          <div class="p-6 m-6 shadow-xl rounded-xl">
+            <div class="">
+              <img
+                class="bg-[#F1F1F1] rounded-xl p-5"
+                src="images/jacket-4.png"
+                alt=""
+              />
+              <h1 class="font-bold text-2xl text-[#363958] py-4">
+                Snowboard Jacket Mens
+              </h1>
+              <p>
+                Conquer the cold in style! Our men’s snowboard jacket keeps you
+                warm, dry, and comfortable on every winter adventure.
+              </p>
+            </div>
+            <div class="flex justify-between mt-3">
+              <h1 class="text-[#FABE4C] font-black text-4xl">$220</h1>
+              <button
+                class="px-5 py-3 bg-gradient-to-r from-[#A4BC46] to-[#85A019] rounded-lg text-white font-semibold"
+              >
+                <i class="fa-solid fa-cart-shopping"></i>
+                Buy Now
+              </button>
+            </div>
+          </div>
+          <div class="p-6 m-6 shadow-xl rounded-xl">
+            <div class="">
+              <img
+                class="bg-[#F1F1F1] rounded-xl p-5"
+                src="images/jacket-4.png"
+                alt=""
+              />
+              <h1 class="font-bold text-2xl text-[#363958] py-4">
+                Snowboard Jacket Mens
+              </h1>
+              <p>
+                Conquer the cold in style! Our men’s snowboard jacket keeps you
+                warm, dry, and comfortable on every winter adventure.
+              </p>
+            </div>
+            <div class="flex justify-between mt-3">
+              <h1 class="text-[#FABE4C] font-black text-4xl">$220</h1>
+              <button
+                class="px-5 py-3 bg-gradient-to-r from-[#A4BC46] to-[#85A019] rounded-lg text-white font-semibold"
+              >
+                <i class="fa-solid fa-cart-shopping"></i>
+                Buy Now
+              </button>
+            </div>
           </div>
         </div>
-        <div class="p-6 rounded-xl bg-[#ffff] drop-shadow-xl">
-          <div>
-            <img
-              class="bg-[#F1F1F1] rounded-xl p-10"
-              src="images/jacket-1.png"
-              alt=""
-            />
-            <h1 class="text-2xl font-bold mt-4 mb-3">Yellow Coat Jacket</h1>
-            <p class="text-[#3E3E3E]">
-              Lorem Ipsum is simply dummy text of the printing and typesetting
-              industry.
-            </p>
+      </section>
+      <!-- Woman collection -->
+      <section class="my-14">
+        <h1 class="uppercase font-bebas text-5xl mx-5 my-5">Woman jacket</h1>
+        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4">
+          <div class="p-6 m-6 shadow-xl rounded-xl">
+            <div class="">
+              <img
+                class="bg-[#F1F1F1] rounded-xl p-5"
+                src="images/jacket-1.png"
+                alt=""
+              />
+              <h1 class="font-bold text-2xl text-[#363958] py-4">
+                Snowboard Jacket Mens
+              </h1>
+              <p>
+                Conquer the cold in style! Our men’s snowboard jacket keeps you
+                warm, dry, and comfortable on every winter adventure.
+              </p>
+            </div>
+            <div class="flex justify-between mt-3">
+              <h1 class="text-[#FABE4C] font-black text-4xl">$220</h1>
+              <button
+                class="px-5 py-3 bg-gradient-to-r from-[#A4BC46] to-[#85A019] rounded-lg text-white font-semibold"
+              >
+                <i class="fa-solid fa-cart-shopping"></i>
+                Buy Now
+              </button>
+            </div>
           </div>
-          <div class="flex justify-between items-center">
-            <h1 class="font-semibold text-[#FABE4C] text-4xl mt-3">$234</h1>
-            <button
-              class="px-7 py-4 mt-4 font-semibold text-white bg-linear-to-r from-[#A4BC46] to-[#85A019] rounded-xl"
-            >
-              <i class="fa-solid fa-cart-shopping"></i>
-              Buy Now
-            </button>
+          <div class="p-6 m-6 shadow-xl rounded-xl">
+            <div class="">
+              <img
+                class="bg-[#F1F1F1] rounded-xl p-5"
+                src="images/jacket-2.png"
+                alt=""
+              />
+              <h1 class="font-bold text-2xl text-[#363958] py-4">
+                Snowboard Jacket Mens
+              </h1>
+              <p>
+                Conquer the cold in style! Our men’s snowboard jacket keeps you
+                warm, dry, and comfortable on every winter adventure.
+              </p>
+            </div>
+            <div class="flex justify-between mt-3">
+              <h1 class="text-[#FABE4C] font-black text-4xl">$220</h1>
+              <button
+                class="px-5 py-3 bg-gradient-to-r from-[#A4BC46] to-[#85A019] rounded-lg text-white font-semibold"
+              >
+                <i class="fa-solid fa-cart-shopping"></i>
+                Buy Now
+              </button>
+            </div>
+          </div>
+          <div class="p-6 m-6 shadow-xl rounded-xl">
+            <div class="">
+              <img
+                class="bg-[#F1F1F1] rounded-xl p-5"
+                src="images/jacket-3.png"
+                alt=""
+              />
+              <h1 class="font-bold text-2xl text-[#363958] py-4">
+                Snowboard Jacket Mens
+              </h1>
+              <p>
+                Conquer the cold in style! Our men’s snowboard jacket keeps you
+                warm, dry, and comfortable on every winter adventure.
+              </p>
+            </div>
+            <div class="flex justify-between mt-3">
+              <h1 class="text-[#FABE4C] font-black text-4xl">$220</h1>
+              <button
+                class="px-5 py-3 bg-gradient-to-r from-[#A4BC46] to-[#85A019] rounded-lg text-white font-semibold"
+              >
+                <i class="fa-solid fa-cart-shopping"></i>
+                Buy Now
+              </button>
+            </div>
+          </div>
+          <div class="p-6 m-6 shadow-xl rounded-xl">
+            <div class="">
+              <img
+                class="bg-[#F1F1F1] rounded-xl p-5"
+                src="images/jacket-1.png"
+                alt=""
+              />
+              <h1 class="font-bold text-2xl text-[#363958] py-4">
+                Snowboard Jacket Mens
+              </h1>
+              <p>
+                Conquer the cold in style! Our men’s snowboard jacket keeps you
+                warm, dry, and comfortable on every winter adventure.
+              </p>
+            </div>
+            <div class="flex justify-between mt-3">
+              <h1 class="text-[#FABE4C] font-black text-4xl">$220</h1>
+              <button
+                class="px-5 py-3 bg-gradient-to-r from-[#A4BC46] to-[#85A019] rounded-lg text-white font-semibold"
+              >
+                <i class="fa-solid fa-cart-shopping"></i>
+                Buy Now
+              </button>
+            </div>
           </div>
         </div>
-        <div class="p-6 rounded-xl bg-[#ffff] drop-shadow-xl">
-          <div>
-            <img
-              class="bg-[#F1F1F1] rounded-xl p-10"
-              src="images/jacket-1.png"
-              alt=""
-            />
-            <h1 class="text-2xl font-bold mt-4 mb-3">Yellow Coat Jacket</h1>
-            <p class="text-[#3E3E3E]">
-              Lorem Ipsum is simply dummy text of the printing and typesetting
-              industry.
-            </p>
-          </div>
-          <div class="flex justify-between items-center">
-            <h1 class="font-semibold text-[#FABE4C] text-4xl mt-3">$234</h1>
-            <button
-              class="px-7 py-4 mt-4 font-semibold text-white bg-linear-to-r from-[#A4BC46] to-[#85A019] rounded-xl"
-            >
-              <i class="fa-solid fa-cart-shopping"></i>
-              Buy Now
-            </button>
-          </div>
-        </div>
-        <div class="p-6 rounded-xl bg-[#ffff] drop-shadow-xl">
-          <div>
-            <img
-              class="bg-[#F1F1F1] rounded-xl p-10"
-              src="images/jacket-1.png"
-              alt=""
-            />
-            <h1 class="text-2xl font-bold mt-4 mb-3">Yellow Coat Jacket</h1>
-            <p class="text-[#3E3E3E]">
-              Lorem Ipsum is simply dummy text of the printing and typesetting
-              industry.
-            </p>
-          </div>
-          <div class="flex justify-between items-center">
-            <h1 class="font-semibold text-[#FABE4C] text-4xl mt-3">$234</h1>
-            <button
-              class="px-7 py-4 mt-4 font-semibold text-white bg-linear-to-r from-[#A4BC46] to-[#85A019] rounded-xl"
-            >
-              <i class="fa-solid fa-cart-shopping"></i>
-              Buy Now
-            </button>
-          </div>
-        </div>
-      </div>
+      </section>
+      <section></section>
+      <section></section>
     </main>
     <footer></footer>
   </body>
