--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         </div>
       </div>
     </header>
-    <main>
+    <main class="lg:px-32">
       <!-- Man collection -->
       <section class="my-14">
         <h1 class="uppercase font-bebas text-5xl mx-5 my-5">Man jacket</h1>
@@ -119,15 +119,16 @@
             <div class="">
               <img
                 class="bg-[#F1F1F1] rounded-xl p-5"
-                src="images/jacket-4.png"
+                src="images/jacket-5.png"
                 alt=""
               />
               <h1 class="font-bold text-2xl text-[#363958] py-4">
-                Snowboard Jacket Mens
+                Man Leather Jackets
               </h1>
               <p>
-                Conquer the cold in style! Our men’s snowboard jacket keeps you
-                warm, dry, and comfortable on every winter adventure.
+                Classic style meets modern edge — our men’s leather jackets are
+                durable, comfortable, and designed to elevate any look with
+                timeless confidence.
               </p>
             </div>
             <div class="flex justify-between mt-3">
@@ -144,15 +145,16 @@
             <div class="">
               <img
                 class="bg-[#F1F1F1] rounded-xl p-5"
-                src="images/jacket-4.png"
+                src="images/jacket-6.png"
                 alt=""
               />
               <h1 class="font-bold text-2xl text-[#363958] py-4">
-                Snowboard Jacket Mens
+                Man Casual Jackets
               </h1>
               <p>
-                Conquer the cold in style! Our men’s snowboard jacket keeps you
-                warm, dry, and comfortable on every winter adventure.
+                Effortless style for everyday wear — our men’s casual jackets
+                combine comfort, versatility, and a modern look for any
+                occasion.
               </p>
             </div>
             <div class="flex justify-between mt-3">
@@ -204,11 +206,11 @@
                 alt=""
               />
               <h1 class="font-bold text-2xl text-[#363958] py-4">
-                Snowboard Jacket Mens
+                Yellow Coat Jacket
               </h1>
               <p>
-                Conquer the cold in style! Our men’s snowboard jacket keeps you
-                warm, dry, and comfortable on every winter adventure.
+                Brighten up your winter style with our yellow coat jacket —
+                warm, trendy, and made to keep you cozy in any weather.
               </p>
             </div>
             <div class="flex justify-between mt-3">
@@ -232,8 +234,9 @@
                 Snowboard Jacket Mens
               </h1>
               <p>
-                Conquer the cold in style! Our men’s snowboard jacket keeps you
-                warm, dry, and comfortable on every winter adventure.
+                Chic, cozy, and versatile — our ladies’ jackets are designed to
+                keep you warm while adding effortless elegance to your everyday
+                style.
               </p>
             </div>
             <div class="flex justify-between mt-3">
@@ -254,11 +257,11 @@
                 alt=""
               />
               <h1 class="font-bold text-2xl text-[#363958] py-4">
-                Snowboard Jacket Mens
+                Woman Leather Jacket
               </h1>
               <p>
-                Conquer the cold in style! Our men’s snowboard jacket keeps you
-                warm, dry, and comfortable on every winter adventure.
+                Bold and timeless — our women’s leather jacket blends elegance
+                with an edgy touch, perfect for elevating any outfit.
               </p>
             </div>
             <div class="flex justify-between mt-3">
@@ -279,11 +282,11 @@
                 alt=""
               />
               <h1 class="font-bold text-2xl text-[#363958] py-4">
-                Snowboard Jacket Mens
+                Yellow Coat Jacket
               </h1>
               <p>
-                Conquer the cold in style! Our men’s snowboard jacket keeps you
-                warm, dry, and comfortable on every winter adventure.
+                Brighten up your winter style with our yellow coat jacket —
+                warm, trendy, and made to keep you cozy in any weather.
               </p>
             </div>
             <div class="flex justify-between mt-3">
@@ -298,9 +301,93 @@
           </div>
         </div>
       </section>
-      <section></section>
+      <!-- shopping sector -->
+      <section class="lg:flex my-6 lg:mt-10 lg:mb-24">
+        <div class="lg:flex m-6 justify-between">
+          <div>
+            <div
+              class="flex p-5 lg:w-full items-center gap-5 shadow-xl rounded-xl"
+            >
+              <div class="max-w-16 my-5">
+                <img src="icons/house.png" alt="" />
+              </div>
+              <div>
+                <h1 class="font-bold text-3xl">Find the Perfect Fit</h1>
+                <p>
+                  Everybody is different, which is why we offer styles for every
+                  body.
+                </p>
+              </div>
+            </div>
+            <div
+              class="flex p-5 lg:w-full items-center gap-5 shadow-xl rounded-xl"
+            >
+              <div class="max-w-16 my-5">
+                <img src="icons/house.png" alt="" />
+              </div>
+              <div>
+                <h1 class="font-bold text-3xl">Free Exchanges</h1>
+                <p>One of the many reasons you can shop with peace of mind.</p>
+              </div>
+            </div>
+            <div
+              class="flex p-5 lg:w-full items-center gap-5 shadow-xl rounded-xl"
+            >
+              <div class="max-w-16 my-5">
+                <img src="icons/house.png" alt="" />
+              </div>
+              <div>
+                <h1 class="font-bold text-3xl">Contact Our Seller</h1>
+                <p>
+                  They are here to help you. That's quite literally what we pay
+                  them for.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="lg:w-1/3 my-20">
+            <img src="images/shopping.png" alt="" />
+          </div>
+        </div>
+      </section>
       <section></section>
     </main>
-    <footer></footer>
+    <footer class="bg-black text-white  lg:px-36 px-5 pt-6 lg:pt-20 pb-5">
+      <div class="grid lg:grid-cols-3">
+        <div>
+          <img class="max-w-72" src="icons/logo.png" alt="" />
+          <p class="py-5">
+            Penguine Fashion is a modern online fashion store offering
+            premium-quality jackets, coats, and trendy outfits. We bring you
+            stylish, comfortable, and durable clothing at affordable prices.
+          </p>
+        </div>
+        <div class="lg:pl-32">
+          <h1 class="font-bold text-xl">Quick Links</h1>
+          <div class="pt-5">
+            <ul class="flex lg:flex-col gap-2 lg:gap-3">
+              <li><a href="home.html">Home</a></li>
+              <li><a href="product.html">Product</a></li>
+              <li><a href="about.html">About Us</a></li>
+              <li><a href="contact.html">Contact Us</a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="pt-10">
+          <h1 class="font-bold text-xl">Contact Us</h1>
+          <div class="flex gap-5 pt-5">
+            <i class="fa-brands fa-facebook"></i>
+            <i class="fa-brands fa-github"></i>
+            <i class="fa-brands fa-youtube"></i>
+          </div>
+        </div>
+      </div>
+      <hr class="text-white my-5" />
+      <div class="">
+        <p class="text-center text-gray-300 text-sm py-4">
+          © 2025 Your Website Name. All rights reserved.
+        </p>
+      </div>
+    </footer>
   </body>
 </html>
