all pages style done

--- a/index.html
+++ b/index.html
@@ -40,11 +40,13 @@
   </head>
   <body>
     <!-- header section start -->
-    <header class="lg:px-32 py-14 bg-[#FFFBF0]">
+    <header class="">
       <!-- navbar style -->
-      <nav class="lg:flex lg:justify-between lg:items-center p-5">
+      <nav
+        class="lg:flex lg:px-32 lg:justify-between lg:items-center p-5 bg-black text-white max-w-full"
+      >
         <div>
-          <a href="home.html">
+          <a href="index.html">
             <img
               class="max-w-72 mx-auto"
               src="icons/logo.png"
@@ -52,17 +54,43 @@
             />
           </a>
         </div>
-        <div class="pt-5">
-          <ul class="flex justify-between gap-3 lg:gap-6 px-3">
-            <li><a href="home.html">Home</a></li>
-            <li><a href="product.html">Product</a></li>
-            <li><a href="about.html">About Us</a></li>
-            <li><a href="contact.html">Contact Us</a></li>
+        <div class="">
+          <ul class="flex justify-between gap-3 lg:gap-5 px-3">
+            <li>
+              <a
+                class="hover:bg-[#90AA2D] hover:px-5 hover:py-2 px-5 py-2 border-white rounded-lg"
+                href="index.html"
+                >Home</a
+              >
+            </li>
+            <li>
+              <a
+                class="hover:bg-[#90AA2D] hover:px-5 hover:py-2 px-5 py-2 border-white rounded-lg"
+                href="product.html"
+                >Product</a
+              >
+            </li>
+            <li>
+              <a
+                class="hover:bg-[#90AA2D] hover:px-5 hover:py-2 px-5 py-2 border-white rounded-lg"
+                href="about.html"
+                >About Us</a
+              >
+            </li>
+            <li>
+              <a
+                class="hover:bg-[#90AA2D] hover:px-5 hover:py-2 px-5 py-2 border-white rounded-lg"
+                href="contact.html"
+                >Contact Us</a
+              >
+            </li>
           </ul>
         </div>
       </nav>
       <!-- banner style -->
-      <div class="lg:flex px-5 my-16 lg:items-center mx-auto justify-between">
+      <div
+        class="lg:px-32 py-14 bg-[#FFFBF0] lg:flex px-5 lg:items-center mx-auto justify-between"
+      >
         <div>
           <h1 class="text-6xl font-bebas">
             <span class="text-[#FABE4C]">Be the Penguins</span> <br />
@@ -101,12 +129,12 @@
                 Snowboard Jacket Mens
               </h1>
               <p>
-                Conquer the cold in style! Our men’s snowboard jacket keeps you
-                warm, dry, and comfortable on every winter adventure.
+                Stay warm, dry, and comfortable in every winter adventure with
+                our men’s snowboard jacket.
               </p>
             </div>
-            <div class="flex justify-between mt-3">
-              <h1 class="text-[#FABE4C] font-black text-4xl">$220</h1>
+            <div class="flex justify-between mt-3 items-center">
+              <h1 class="text-[#FABE4C] font-black text-3xl">$220</h1>
               <button
                 class="px-5 py-3 bg-gradient-to-r from-[#A4BC46] to-[#85A019] rounded-lg text-white font-semibold"
               >
@@ -126,13 +154,12 @@
                 Man Leather Jackets
               </h1>
               <p>
-                Classic style meets modern edge — our men’s leather jackets are
-                durable, comfortable, and designed to elevate any look with
-                timeless confidence.
+                Stay warm, dry, and comfortable in every winter adventure with
+                our men’s snowboard jacket.
               </p>
             </div>
-            <div class="flex justify-between mt-3">
-              <h1 class="text-[#FABE4C] font-black text-4xl">$220</h1>
+            <div class="flex justify-between mt-3 items-center">
+              <h1 class="text-[#FABE4C] font-black text-3xl">$220</h1>
               <button
                 class="px-5 py-3 bg-gradient-to-r from-[#A4BC46] to-[#85A019] rounded-lg text-white font-semibold"
               >
@@ -157,8 +184,8 @@
                 occasion.
               </p>
             </div>
-            <div class="flex justify-between mt-3">
-              <h1 class="text-[#FABE4C] font-black text-4xl">$220</h1>
+            <div class="flex justify-between mt-3 items-center">
+              <h1 class="text-[#FABE4C] font-black text-3xl">$220</h1>
               <button
                 class="px-5 py-3 bg-gradient-to-r from-[#A4BC46] to-[#85A019] rounded-lg text-white font-semibold"
               >
@@ -178,12 +205,12 @@
                 Snowboard Jacket Mens
               </h1>
               <p>
-                Conquer the cold in style! Our men’s snowboard jacket keeps you
-                warm, dry, and comfortable on every winter adventure.
+                Stay warm, dry, and comfortable in every winter adventure with
+                our men’s snowboard jacket.
               </p>
             </div>
-            <div class="flex justify-between mt-3">
-              <h1 class="text-[#FABE4C] font-black text-4xl">$220</h1>
+            <div class="flex justify-between mt-3 items-center">
+              <h1 class="text-[#FABE4C] lg:font-black text-3xl">$220</h1>
               <button
                 class="px-5 py-3 bg-gradient-to-r from-[#A4BC46] to-[#85A019] rounded-lg text-white font-semibold"
               >
@@ -199,7 +226,7 @@
         <h1 class="uppercase font-bebas text-5xl mx-5 my-5">Woman jacket</h1>
         <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4">
           <div class="p-6 m-6 shadow-xl rounded-xl">
-            <div class="">
+            <div>
               <img
                 class="bg-[#F1F1F1] rounded-xl p-5"
                 src="images/jacket-1.png"
@@ -209,12 +236,12 @@
                 Yellow Coat Jacket
               </h1>
               <p>
-                Brighten up your winter style with our yellow coat jacket —
-                warm, trendy, and made to keep you cozy in any weather.
+                Stay warm, dry, and comfortable in every winter adventure with
+                our men’s snowboard jacket.
               </p>
             </div>
-            <div class="flex justify-between mt-3">
-              <h1 class="text-[#FABE4C] font-black text-4xl">$220</h1>
+            <div class="flex justify-between mt-3 items-center">
+              <h1 class="text-[#FABE4C] font-black text-3xl">$220</h1>
               <button
                 class="px-5 py-3 bg-gradient-to-r from-[#A4BC46] to-[#85A019] rounded-lg text-white font-semibold"
               >
@@ -231,16 +258,15 @@
                 alt=""
               />
               <h1 class="font-bold text-2xl text-[#363958] py-4">
-                Snowboard Jacket Mens
+                Snowboard Jacket
               </h1>
               <p>
-                Chic, cozy, and versatile — our ladies’ jackets are designed to
-                keep you warm while adding effortless elegance to your everyday
-                style.
+                Stay warm, dry, and comfortable in every winter adventure with
+                our men’s snowboard jacket.
               </p>
             </div>
-            <div class="flex justify-between mt-3">
-              <h1 class="text-[#FABE4C] font-black text-4xl">$220</h1>
+            <div class="flex justify-between mt-3 items-center">
+              <h1 class="text-[#FABE4C] font-black text-3xl">$220</h1>
               <button
                 class="px-5 py-3 bg-gradient-to-r from-[#A4BC46] to-[#85A019] rounded-lg text-white font-semibold"
               >
@@ -257,15 +283,15 @@
                 alt=""
               />
               <h1 class="font-bold text-2xl text-[#363958] py-4">
-                Woman Leather Jacket
+                Leather Jacket
               </h1>
               <p>
-                Bold and timeless — our women’s leather jacket blends elegance
-                with an edgy touch, perfect for elevating any outfit.
+                Stay warm, dry, and comfortable in every winter adventure with
+                our men’s snowboard jacket.
               </p>
             </div>
-            <div class="flex justify-between mt-3">
-              <h1 class="text-[#FABE4C] font-black text-4xl">$220</h1>
+            <div class="flex justify-between mt-3 items-center">
+              <h1 class="text-[#FABE4C] font-black text-3xl">$220</h1>
               <button
                 class="px-5 py-3 bg-gradient-to-r from-[#A4BC46] to-[#85A019] rounded-lg text-white font-semibold"
               >
@@ -285,12 +311,12 @@
                 Yellow Coat Jacket
               </h1>
               <p>
-                Brighten up your winter style with our yellow coat jacket —
-                warm, trendy, and made to keep you cozy in any weather.
+                Stay warm, dry, and comfortable in every winter adventure with
+                our men’s snowboard jacket.
               </p>
             </div>
-            <div class="flex justify-between mt-3">
-              <h1 class="text-[#FABE4C] font-black text-4xl">$220</h1>
+            <div class="flex justify-between mt-3 items-center">
+              <h1 class="text-[#FABE4C] font-black text-3xl">$220</h1>
               <button
                 class="px-5 py-3 bg-gradient-to-r from-[#A4BC46] to-[#85A019] rounded-lg text-white font-semibold"
               >
@@ -352,7 +378,7 @@
       </section>
       <section></section>
     </main>
-    <footer class="bg-black text-white  lg:px-36 px-5 pt-6 lg:pt-20 pb-5">
+    <footer class="bg-black text-white lg:px-36 px-5 pt-6 lg:pt-20 pb-5">
       <div class="grid lg:grid-cols-3">
         <div>
           <img class="max-w-72" src="icons/logo.png" alt="" />
@@ -366,19 +392,43 @@
           <h1 class="font-bold text-xl">Quick Links</h1>
           <div class="pt-5">
             <ul class="flex lg:flex-col gap-2 lg:gap-3">
-              <li><a href="home.html">Home</a></li>
-              <li><a href="product.html">Product</a></li>
-              <li><a href="about.html">About Us</a></li>
-              <li><a href="contact.html">Contact Us</a></li>
+              <li>
+                <a
+                  class="hover:bg-[#90AA2D] hover:px-5 hover:py-2 py-2 border-white rounded-lg"
+                  href="index.html"
+                  >Home</a
+                >
+              </li>
+              <li>
+                <a
+                  class="hover:bg-[#90AA2D] hover:px-5 hover:py-2 py-2 border-white rounded-lg"
+                  href="product.html"
+                  >Product</a
+                >
+              </li>
+              <li>
+                <a
+                  class="hover:bg-[#90AA2D] hover:px-5 hover:py-2 py-2 border-white rounded-lg"
+                  href="about.html"
+                  >About Us</a
+                >
+              </li>
+              <li>
+                <a
+                  class="hover:bg-[#90AA2D] hover:px-5 hover:py-2 py-2 border-white rounded-lg"
+                  href="contact.html"
+                  >Contact Us</a
+                >
+              </li>
             </ul>
           </div>
         </div>
-        <div class="pt-10">
+        <div>
           <h1 class="font-bold text-xl">Contact Us</h1>
-          <div class="flex gap-5 pt-5">
-            <i class="fa-brands fa-facebook"></i>
-            <i class="fa-brands fa-github"></i>
-            <i class="fa-brands fa-youtube"></i>
+          <div class="flex gap-5 pt-5 text-4xl">
+            <a href="#"><i class="fa-brands fa-facebook text-blue-800"></i></a>
+            <a href="#"><i class="fa-brands fa-github"></i></a>
+            <a href="#"><i class="fa-brands fa-youtube text-red-700"></i></a>
           </div>
         </div>
       </div>
